Working file encrypt/decrypt
