# DES/DES.Api/Controllers/DESController.cs
@@ -1,3 +1,4 @@
+using System.Runtime.CompilerServices;
 using DES.Api.Models;
 using DES.Core;
 using Microsoft.AspNetCore.Mvc;
@@ -16,8 +17,8 @@ namespace DES.Api.Controllers
 
         [HttpPost]
         [Route("api/encryptFile")]
-        public async Task<ActionResult<List<FileContentResult>>> EncryptFile([FromForm] InputFile input)
-        {            
+        public async Task<ActionResult<IEnumerable<OutputFile>>> EncryptFile([FromForm] InputFile input)
+        {
             try
             {
                 return Ok(await DecodeOrEncodeFile(input, DESImpl.Encrypt));
@@ -30,7 +31,7 @@ namespace DES.Api.Controllers
 
         [HttpPost]
         [Route("api/decryptFile")]
-        public async Task<ActionResult<List<FileContentResult>>> DecryptFile([FromForm] InputFile input)
+        public async Task<ActionResult<IEnumerable<OutputFile>>> DecryptFile([FromForm] InputFile input)
         {
             try
             {
@@ -42,9 +43,9 @@ namespace DES.Api.Controllers
             }
         }
 
-        private async Task<List<FileContentResult>> DecodeOrEncodeFile(InputFile input, Func<ulong, ulong, ulong> function)
+        private async Task<IEnumerable<OutputFile>> DecodeOrEncodeFile(InputFile input, Func<ulong, ulong, ulong> function)
         {
-            List<byte[]> files = new();
+            List<(byte[], string)> files = new();
             if (input.Files == null)
                 throw new InvalidDataException("Must specify files to encode");
 
@@ -52,17 +53,17 @@ namespace DES.Api.Controllers
             {
                 await using var memoryStream = new MemoryStream();
                 await file.CopyToAsync(memoryStream);
-                files.Add(memoryStream.ToArray());
+                files.Add((memoryStream.ToArray(), file.FileName));
             }
 
-            List<FileContentResult> encodedFiles = new();
-            foreach (var file in files)
+            List<OutputFile> encodedFiles = new();
+            foreach (var (file, fileName) in files)
             {
                 List<byte> bytes = new(file);
                 for (int i = bytes.Count % 8; i != 0 && i < 8; ++i)
                     bytes.Add(0);
 
-                List<ulong> encodedList = new();
+                List<ulong> encodedList = new(bytes.Count / 8);
                 for (int i = 0; i < bytes.Count; i += 8)
                 {
                     ulong result = 0x0;
@@ -72,14 +73,16 @@ namespace DES.Api.Controllers
                     encodedList.Add(function(result, input.Key));
                 }
 
-                List<byte> split = new();
+                List<byte> split = new(encodedList.Count * 8);
                 foreach (var encoded in encodedList)
-                {
-                    for (int i = 0; i < 8; ++i)
+                    for (int i = 7; i != -1; --i)
                         split.Add((byte)(encoded >> (i * 8)));
-                }
 
-                encodedFiles.Add(new FileContentResult(split.ToArray(), "application/x-binary"));
+                encodedFiles.Add(new OutputFile
+                {
+                    Data = split.ToArray(),
+                    FileName = "processed-" + fileName
+                });
             }
 
             return encodedFiles;
