# DES/DES.Api/Models/OutputFile.cs
@@ -1,0 +1,8 @@
+namespace DES.Api.Models
+{
+    public class OutputFile
+    {
+        public string? FileName { get; set; }
+        public byte[]? Data { get; set; }
+    }
+}
